style.css
* {
    font-family: 'Quicksand', sans-serif;
    color: rgba(0, 0, 0, 0.7);
}

body {
    margin: 0;
}

.page-container {
    display: grid;
    grid-template-columns: 1fr 5fr;
    grid-template-rows: 1fr 5fr;
    min-height: 100vh;
}

.header {
    background-color: rgb(255, 198, 151);
    display: grid;
    grid-template-columns: 1fr 1fr;
    justify-items: center;
    align-items: center;
    padding: 0px 30px;
}

.search-container {
    justify-self: stretch;
    display: flex;
    align-items: center;
    gap: 10px;
}

.search-bar {
    border: none;
    border-radius: 20px;
    background-color: rgb(255, 222, 178);
    padding: 0px 10px;
    height: 1.8em;
    flex: 1;
}
.search-bar:focus {
    outline: 2px solid grey;
}

.search-container > img{
    width: 25px;
    opacity: 0.7;
}

.user-info {
    justify-self: end;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
}

.notif-icon {
    width: 18px;
    opacity: 0.7;
}

.info-user-icon {
    width: 30px;
    opacity: 0.7;
}

.greeting {
    justify-self: start;
    display: flex;
    align-items: center;
    gap: 10px;
}

.greeting-user-icon {
    width: 50px;
    opacity: 0.7;
}

.hello-div {
    font-size: 0.8rem;
}

.username-greet-div {
    font-size: 1rem;
}

.head-buttons {
    justify-self: end;
    display: flex;
    align-items: center;
    gap: 30px;
}

.head-buttons > button {
    padding: 7px 12px;
    border: none;
    border-radius: 20px;
    background-color: rgb(248, 145, 19);
    color: rgb(255, 222, 178);
}

.sidebar {
    background-color: rgb(228, 174, 58);
    grid-row: 1 / 3;
    display: grid;
    grid-template-rows: 1fr 3fr 6fr;
    justify-items: start;
}

.sidebar-logo {
    align-self: start;
    display: flex;
    align-items: flex-start;
    gap: 10px;
    padding: 10px 50px 0px 10px;
}

.sidebar-logo > img {
    width: 40px;
    opacity: 0.7;
}

.sidebar-logo > div {
    font-size: 1.5rem;
}

.primary-nav, .secondary-nav {
    display: flex;
    flex-direction: column;
    gap: 10px;
    padding: 0px 50px 0px 20px;
}

.nav-item {
    display: flex;
    align-items: center;
    gap: 20px;
}

.nav-item > img {
    width: 20px;
    opacity: 0.7;
}

.main-content {
    background-color: rgb(228, 89, 58);
    grid-column: 2 / 3;
    display: grid;
    grid-template-columns: 3fr 1fr;
    gap: 20px;
    padding: 20px;
}

.main-header {
    padding-bottom: 10px;
}

.project-container{
    grid-column: 1 / 2;
    grid-row: 1 / 3;
}

.project-main {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
    gap: 20px;
}

.project-item, .announce-main, .trend-main {
    background-color: rgb(255, 222, 178);
    border-radius: 15px;
    padding: 20px;
}

.project-item {
    display: grid;
    grid-template-rows: 1fr 6fr 1fr;
}

.project-header, .announce-header, .trend-user {
    font-weight: 600;
}

.project-text {
    padding: 10px 0px;
}

.project-links {
    display: flex;
    justify-content: flex-end;
    gap: 10px;
}

.project-links > img {
    width: 25px;
    opacity: 0.7;
}

.announce-main {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.announce-item-middle {
    border-top: 1px solid rgba(153, 153, 153, 0.481);
    border-bottom: 1px solid rgba(153, 153, 153, 0.481);
    padding: 10px 0px;
}

.announce-header, .announce-text, .trend-user, .trend-user-bio {
    font-size: 0.8rem;
}

.trend-container {
    grid-column: 2 / 3;
    align-self: end;
}

.trend-main {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.trend-item {
    display: flex;
    gap: 10px;
}

.trend-icon {
    width: 30px;
    opacity: 0.7;
}

